--- a/config.json
+++ b/config.json
@@ -1,5 +1,5 @@
 {
-  "auto_start_enabled": false,
+  "auto_start_enabled": true,
   "monitor_detection_enabled": true,
   "alert_duration_seconds": 4.0,
   "camera_index": 2,
