--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,12 @@
 # Python version requirement
-# Requires Python 3.8-3.11 (MediaPipe compatibility)
-# Tested with Python 3.10.18
+# REQUIRES Python 3.8-3.11 for MediaPipe compatibility
+# RECOMMENDED: Python 3.10.18 (tested and stable)
+# 
+# IMPORTANT: If you get MediaPipe installation errors, ensure you're using Python 3.8-3.11
+# Install Python 3.10: brew install python@3.10
+# Install tkinter: brew install python-tk@3.10
 
-# Core dependencies for Python 3.10
+# Core dependencies for Python 3.8-3.11
 opencv-python>=4.8.0
 mediapipe>=0.10.0
 numpy>=1.24.0
