--- a/.gitignore
+++ b/.gitignore
@@ -64,6 +64,10 @@ local_settings.py
 db.sqlite3
 db.sqlite3-journal
 
+# PosturePal runtime files
+posture_status.json
+toggle_window.txt
+
 # Flask stuff:
 instance/
 .webassets-cache
